# owl

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  bench_hpke.py  bench_hpke.sh  bench_wg_linedelay.py  bench_wg_mss.py  bench_wireguard_end_to_end.sh  cabal.project  experiment1.py  experiment2.py  experiment3.py  experiment4.py  experiment5.py  experiment5_host.py  experiment6_host.py  flake.nix  microbench_wg_handshake.py  microbench_wg_handshake.sh  microbench_wg_transport.py  microbench_wg_transport.sh  old.cabal.project.local  owl.cabal  prelude.smt2  requirements.txt  run_owlc.sh  run_owlc_on_all.py  run_owlc_on_all.sh  verify_echo_server_example.sh
client_example/: client_example.owl
client_example/extraction/: .gitignore  Cargo.toml
client_example/extraction/src/: execlib.rs  lib.rs  owl_hmac.rs  server.rs  speclib.rs
docs/: 1-intro-to-owl.md  compiler-guide.md  crypto-ops.md  encrypted_key_basic.owl
docs/internals/: kdf.md
echo_server_example/extraction/: run_verus.sh
echo_server_example/extraction/src/: execlib.rs  lib.rs  owl_const_bytes.rs  owl_pke.rs
extraction/: .gitignore  Cargo.toml  itree_example.rs  lib_preamble.rs  preamble.rs  run_verus.sh  rust-toolchain.toml  tmp.rs
extraction/src/: deep_view.rs  execlib.rs  lib.rs  owl_aead.rs  owl_const_bytes.rs  owl_dhke.rs  owl_hkdf.rs  owl_hmac.rs  owl_pke.rs  owl_util.rs  speclib.rs
full_protocol_case_studies/implementations/wireguard/: cleanup-netconfig.sh  setup-netconfig.sh
full_protocol_case_studies/owl_models/hpke/: defs.owl
full_protocol_case_studies/owl_models/wg/: init.owl  transp.owl
hpke/owl-hpke/: Cargo.toml
hpke/owl-hpke/src/: execlib.rs  lib.rs  owl_aead.rs  owl_dhke.rs  owl_hmac.rs  owl_pke.rs  owl_util.rs  speclib.rs
hpke/rust-hpke/: Cargo.toml
hpke/rust-hpke/src/: aead.rs  setup.rs
hpke/test_bench_hpke/: Cargo.toml
hpke/test_bench_hpke/src/: main.rs
owl_toy_protocols/: basic_hash-indexed.rs  denning-sacco.rs  dhke.rs  feldhofer-indexed.rs  hash-lock.rs  kerberos.owl  kerberos.rs  lak-indexed.owl  lak-indexed.rs  mw-indexed.owl  mw-indexed.rs  ns-sym-indexed.owl  ns-sym-indexed.rs  nsl.rs  otwayrees-indexed.rs  private_authentication_hybrid.rs  ssh.owl  ssh.rs  yahalom-indexed.rs
simple-tls/: defs.owl  handshake.owl  main.owl  record.owl
src/: ANFPass.hs  AST.hs  CmdArgs.hs  ConcreteAST.hs  Extraction.hs  LabelChecking.hs  Main.hs  Parse.hs  Pretty.hs  SMT.hs  SMTBase.hs  Test.hs  Typing.hs  TypingBase.hs
src/Extraction/: ConcreteAST.hs  Concretify.hs  Extraction.hs  ExtractionBase.hs  ExtractionTop.hs  GenRust.hs  GenVerus.hs  LowerBufOpt.hs  LowerImmut.hs  PrettyRust.hs  PrettyVerus.hs  Rust.hs  SpecExtraction.hs  Verus.hs
src/Pass/: ANFPass.hs  ModuleFlattening.hs  PathResolution.hs  Timestamping.hs
tests/failure/: bad_locality.owl  corr_enc_bad.owl  duplicateDef.owl  duplicate_prf.owl  duplicate_ro.owl  inconclusive.owl  parse_lengths_unparsable.owl  pcCheck1.owl  trivial_random_orcl.owl  wrong_name.owl
tests/should_fail/: kdf_corr_public_args.owl  types.owl
tests/should_succeed/: basic_hash.owl  dangling_path_var.owl  lak-indexed.owl  lak.owl  mod_alias.owl  mw-indexed.owl  mw.owl  struct_resolution.owl  subtyping.owl
tests/success/: RONoCollide.owl  abstract_ty.owl  abstractdefs.owl  aead_ctr.owl  apex_example.owl  arith.owl  axiom_trigger.owl  basic_auth.owl  basic_hash-indexed.owl  basics.owl  bool.owl  call.owl  chain.owl  checknonce.owl  corr_enc.owl  corrdecl.owl  crh.owl  debug.owl  denning-sacco.owl  dep_enum.owl  dhke.owl  double_index.owl  easy_call.owl  encrypted_key.owl  encrypted_key_indexed.owl  encrypted_key_struct.owl  enum_parsing_example.owl  enumlength.owl  enums.owl  fancy_struct.owl  feldhofer-indexed.owl  flowdecl.owl  forall.owl  guard.owl  hash-lock.owl  idx_locality.owl  ifcond.owl  infer.owl  kdf-corr.owl  kdf-enc.owl  (+38 more)
tests/success/indices/: indices.owl  mac_indices.owl
tests/success/ke/: dh_ke.owl  full_protocol.owl  ke.owli  psk_ke.owl  transp.owl  transp.owli
tests/success/ke_mod/: dh_ke.owl  full_protocol.owl  ke.owli  params.owli  psk_ke.owl  transp.owl  transp.owli
tests/success/kerberos/: README.md  kerberos.owli  kerberos_2_3.owl  kerberos_ASE_pkinit.owl  kerberos_ASE_standard.owl  kerberos_full_pkinit.owl  kerberos_full_standard.owl
tests/success/kerberos_mod/: kerberos_pkinit.owl  kerberos_skinit.owl  kerberos_stage1.owli  kerberos_stage23.owl
tests/success/mods/: functor.owl  (+5 more)
tests/wip/: partial_auth_concat_dh.owl  unauth_hash.owl  wireguard-full.owl  wireguard-indexed.owl  wireguard.owl
tls/: simple-tls.owl
vim/ftdetect/: owl.vim
vim/syntax/: owl.vim
vscode/owl-support-for-vscode/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
wg/: .gitignore  cleanup-netconfig.sh  jq_dump.sh  run-iperf-test.sh  run-linedelay-test.sh  run_all_benches.sh  setup-netconfig.sh  wg1.conf  wg1n.conf
wg/wireguard-go/: Makefile  main.go
wg/wireguard-rs/: .gitignore  Cargo.toml  bench_send_recv.py
wireguard-go/device/: noise-protocol.go  send.go
wireguard-go/lib/: .gitignore
wireguard-rs/: .gitignore  Cargo.toml  bench_end_to_end.py  bench_handshake.py  bench_send_recv.py  cleanup-netconfig.sh  profile.json  run-iperf-test.sh  run-linedelay-test.sh  setup-netconfig.sh
wireguard-rs/src/: main.rs
wireguard-rs/src/owl-wg/: deep_view.rs  owl_hmac.rs  owl_wireguard.rs  owl_wireguard_lib.rs  parse_serialize.veil
wireguard-rs/src/wireguard/: tests.rs  wireguard.rs  workers.rs
wireguard-rs/src/wireguard/handshake/: device.rs  macs.rs  mod.rs  noise.rs  peer.rs  tests.rs
wireguard-rs/src/wireguard/owl-wg/: execlib.rs  owl_dhke.rs  owl_util.rs  owl_wireguard.rs  parse_serialize.rs
wireguard-rs/src/wireguard/owl_wg/: execlib.rs  mod.rs  owl_aead.rs  owl_dhke.rs  owl_hkdf.rs  owl_hmac.rs  owl_pke.rs  owl_wireguard.rs  parse_serialize.rs  parse_serialize.veil  parse_serialize.vest  speclib.rs
wireguard-rs/src/wireguard/router/: device.rs  peer.rs  queue.rs  receive.rs  send.rs
wireguard-rs/src/wireguard/router/tests/: bench_new.rs  tests.rs
(+84 files in other folders)
