name:                owl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/secure-foundations/owl
--license:             BSD3
--license-file:        LICENSE
--author:              Author name here
--maintainer:          example@example.com
--copyright:           2022 Author name here
--category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable owl
  hs-source-dirs:      src, src/Extraction
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules: Parse, AST, Typing, LabelChecking, SMT, CmdArgs, Test, TypingBase, SMTBase, ConcreteAST, Extraction, ANFPass
  build-depends:       base >= 4.7 && < 5,
                       parsec,
                       containers,
                       prettyprinter,
                       lens,
                       mtl,
                       optparse-applicative,
                       filepath,
                       Unique,
                       process,
                       ordered-containers,
                       directory,
                       unbound-generics,
                       dir-traverse,
                       diagnose,
                       data-default

