[package]
name = "extraction-temp"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.0"

# [lib]
# name = "owl_crypto_primitives"
# path = "src/lib.rs"

[bin]
name = "extraction-temp"
path = "src/main.rs"

[dependencies]
aead = "0.5.1"
aes-gcm = "0.10.1"
chacha20poly1305 = "0.10.1"
crypto = "0.4.0"
digest = "0.10.5"
hkdf = "0.12.3"
hmac = "0.12.1"
p256 = { version = "0.11.1", features = ["ecdh", "bits", "serde"] }
rand = "0.8.5"
rsa = "0.7.2"
sha1 = "0.10.5"
sha2 = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
