[package]
name = "extraction"
version = "0.1.0"
edition = "2021"

[lib]
name = "extraction"
path = "src/lib.rs"

# [[bin]]
# name = "extraction"
# path = "src/main.rs"

[dependencies]
aead = {version = "0.5.1"} # , optional = true}
aes-gcm = {version = "0.10.1"} # , optional = true}
chacha20poly1305 = {version = "0.10.1"} # , optional = true}
blake2 = {version = "0.10.6"} # , optional = true}
crypto = "0.4.0"
digest = "0.10.5"
hkdf = "0.12.3"
hmac = "0.12.1"
p256 = { version = "0.11.1", features = ["ecdh", "bits", "serde"] }
rand = "0.8.5"
rsa = "0.7.2"
sha1 = "0.10.5"
sha2 = "0.10.6"
libcrux = { git = "https://github.com/cryspen/libcrux", features = ["rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
builtin = { git = "https://github.com/verus-lang/verus", branch = "main" }
builtin_macros = { git = "https://github.com/verus-lang/verus", branch = "main" }
vstd = { git = "https://github.com/verus-lang/verus", branch = "main" }
# vest = { git = "https://github.com/secure-foundations/vest", branch = "main" }
# parsley = { git = "https://github.com/secure-foundations/parsley", branch = "main" }

[features]
default = [] # ["nonverif-crypto"]
nonverif-crypto = []
