[package]
authors = ["Mathias Hall-Andersen <mathias@hall-andersen.dk>"]
edition = "2018"
license = "MIT"
name = "wireguard-rs"
version = "0.1.4"

[dependencies]
aead = "^0.3"
arraydeque = "0.4.5"
blake2 = "^0.9"
byteorder = "1.3"
chacha20poly1305 = "^0.7"
clear_on_drop = "0.2.3"
cpuprofiler = {version = "*", optional = true}
crossbeam-channel = "^0.5"
dashmap = "^4.0"
digest = "^0.9"
env_logger = "^0.8"
generic-array = "^0.14"
hex = "0.4"
hjul = "0.2.2"
hmac = "^0.10"
log = {version = "0.4", features = ["max_level_trace", "release_max_level_info"]}
num_cpus = "^1.10"
parking_lot = "^0.11"
rand = "^0.7"
rand_core = "^0.5"
ring = "0.16"
spin = "0.7"
zerocopy = "0.3"
aes-gcm = "0.10.1"
crypto = "0.4.0"
hkdf = "0.9.0"
p256 = { version = "0.11.1", features = ["ecdh", "bits", "serde"] }
rsa = "0.7.2"
sha1 = "0.10.5"
sha2 = "0.10.6"
builtin = { git = "https://github.com/verus-lang/verus", branch = "main" }
builtin_macros = { git = "https://github.com/verus-lang/verus", branch = "main" }
vstd = { git = "https://github.com/verus-lang/verus", branch = "main" }

[dependencies.treebitmap]
package = "ip_network_table-deps-treebitmap"
version = "0.5.0"

[target.'cfg(unix)'.dependencies]
libc = "^0.2"

[dependencies.x25519-dalek]
version = "^1.1"

[dependencies.subtle]
version = "^2.4"
#features = ["nightly"]

[features]
profiler = ["cpuprofiler"]
start_up = []
memory_profile = []

[dev-dependencies]
pnet = "^0.27"
proptest = "^0.10"
rand_chacha = "^0.2"
heappy = { git = "https://github.com/mkmik/heappy", rev = "c071b74227cb8c77d6d52180fbd9014284d23917", features = [ "enable_heap_profiler", "measure_free" ] }

[profile.release]
debug = 1